--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     = css3buttons_stylesheets
     = stylesheet_link_tag :all
     = javascript_include_tag :defaults
+    = javascript_include_tag "protovis-r3.2"
+    = javascript_include_tag "walle"
     = yield :javascripts
   %body
     #wrapper
