--- a/public/stylesheets/enlazy.css
+++ b/public/stylesheets/enlazy.css
@@ -69,56 +69,8 @@ body {
   background-color: #FFF;
   padding: 20px; }
 
-#main_col {
-  display: inline-block;
-  width: 540px; }
-
-#secondary_col {
-  display: inline-block;
-  width: 360px;
-  float: right; }
-
-ul.main_links, ul.working_links {
-  font-size: 1.2em; }
-
-ul.main_links li, ul.working_links li {
-  margin-bottom: 20px;
-  line-height: 1.1em; }
-
-ul.working_links a {
-  color: #999; }
-
-span.whole_url {
-  font-size: 0.8em;
-  font-style: italic; }
-
-span.whole_url a {
-  color: #444;
-  text-decoration: underline; }
-
-.move_img {
-  width: 12px;
-  height: 12px;
-  display: inline-block;
-  cursor: pointer;
-  filter: alpha(opacity=50);
-  /* internet explorer */
-  -khtml-opacity: 0.5;
-  /* khtml, old safari */
-  -moz-opacity: 0.5;
-  /* mozilla, netscape */
-  opacity: 0.5;
-  /* fx, safari, opera */
-  background: url(../images/css3-github-buttons-icons.png) 0 -252px no-repeat; }
-
-.move_img:hover,
-.move_img:focus,
-.move_img:active {
-  filter: alpha(opacity=100);
-  /* internet explorer */
-  -khtml-opacity: 1;
-  /* khtml, old safari */
-  -moz-opacity: 1;
-  /* mozilla, netscape */
-  opacity: 1;
-  /* fx, safari, opera */ }
+#fig {
+  position: relative;
+  margin: auto;
+  width: 430px;
+  height: 225px; }
