--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,3 @@
 #fig
-    =render :partial => 'prot'
+    %script{:type => "text/javascript+protovis"}
+        =render :template => "../../public/javascripts/walle.js"
