--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = css3buttons_stylesheets
     = stylesheet_link_tag :all
     = javascript_include_tag :defaults
-    = javascript_include_tag "protovis-r3.2"
+    = javascript_include_tag :graphael
     = yield :javascripts
   %body
     #wrapper
