mas walle que nunca

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = stylesheet_link_tag :all
     = javascript_include_tag :defaults
     = javascript_include_tag :graphael
+    = javascript_include_tag "walle"
     = yield :javascripts
   %body
     #wrapper
