--- a/public/stylesheets/sass/enlazy.scss
+++ b/public/stylesheets/sass/enlazy.scss
@@ -38,9 +38,8 @@ body {
     padding:20px;
 }
 
-#fig {
+#holder {
     position: relative;
-    margin: auto;
-    width: 430px;
-    height: 225px;
+    width: 830px;
+    height: 525px;
 }
