--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title BlankApp
     = csrf_meta_tag
-    = css3buttons_stylesheets
+    -#= css3buttons_stylesheets
     = stylesheet_link_tag :all
     = javascript_include_tag :defaults
     = javascript_include_tag :graphael
