--- a/public/stylesheets/sass/enlazy.scss
+++ b/public/stylesheets/sass/enlazy.scss
@@ -45,11 +45,16 @@ body {
 }
 
 .week_report_wrapper{
-    overflow-x: scroll;
+/*    overflow-x: scroll;*/
+}
+.invert{
+    -webkit-transform: scaleY(-1);
+    -moz-transform: scaleY(-1);
+    -o-transform: scaleY(-1);
 }
 
 .week_report {
     position: relative;
     width: 12900px;
-    height: 325px;
+    height: 141px;
 }
